swagger: add swagger for new handlers
